# probabilities-lab-3

./: CMakeLists.txt  README.md
data/: config.json
src/: main.cpp
src/Controller/: Controller.h
src/Model/: ApproximatedNormalDistribution.h  ContinuousDistribution.h  ExponentialDistribution.h  IDistribution.h  NormalDistribution.h
src/View/: Histogram.h
